<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewCourseTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/course_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addAssignmentButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/add_assignment"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCourseTitle"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/addGroupButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_margin="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/add_group"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/showGroupButton"
        app:layout_constraintTop_toBottomOf="@+id/addAssignmentButton"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/showGroupButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_margin="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/show_groups"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addGroupButton"
        app:layout_constraintTop_toBottomOf="@+id/addAssignmentButton"
        tools:ignore="VisualLintButtonSize" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAssignments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/addGroupButton"
        app:layout_constraintBottom_toTopOf="@+id/calculateGradeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/desiredGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/desired_grade"
        app:layout_constraintBaseline_toBaselineOf="@+id/desiredInput"
        android:textSize="16sp"
        android:textColorHint="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/calculateGradeButton"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/desiredInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:hint="@string/enter_grade"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/calculateDesiredGradeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/desiredGrade"
        tools:ignore="VisualLintTextFieldSize" />


    <Button
        android:id="@+id/calculateGradeButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="3dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="-10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/calculate_grade"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@id/calculateDesiredGradeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/calculateDesiredGradeButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="3dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="-10dp"
        android:text="@string/required_score"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@+id/calculateGradeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
